--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.1",
+    "sharp": "^0.30.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
