Change snake case to camel case
No sé quien use esas rutas pero son
direccion y cuenta bancaria
@fioyerovi @henrysteven @iGioRojas @stefa17pj

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "standard": "^17.0.0"
   }
 }
